[package]
name          = "cw721-sylvia-base"
description   = "Basic implementation of cw721 NFTs using the Sylvia framework."
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
rust-version  = { workspace = true }


[features]
library = []
# enables generation of multi-test utilities for sylvia
mt = ["library", "sylvia/mt"]


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
sylvia          = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
cw-multi-test   = { workspace = true }
sylvia          = { workspace = true, features = ["mt"] }
